fixed overflowing-y content being cut off

--- a/components/layouts/Layout.module.scss
+++ b/components/layouts/Layout.module.scss
@@ -1,12 +1,12 @@
 @use "public/styles/mixins.scss" as *;
 
 .main {
-	width: 100%;
 	height: 100vh;
+
 	overflow: hidden;
 }
 
-.content {
+.contentWrapper {
 	@include flex(row, space-between, flex-start);
 	width: 100%;
 	height: 100%;
@@ -15,14 +15,14 @@
 .children {
 	@include flex(row, center, flex-start);
 	width: 100%;
-	height: 100%;
-	overflow-y: auto;
-	padding-bottom: 5rem;
+	height: calc(100vh - var(--headerHeight));
 
 	@include border($color: transparent);
 	border-radius: 10px 0 0 0;
 
 	background-color: var(--background);
+
+	overflow-y: scroll;
 }
 
 @include mobile-only {
