--- a/public/styles/globals.scss
+++ b/public/styles/globals.scss
@@ -52,8 +52,6 @@ body {
 
 	background-color: var(--backgroundDark);
 	color: var(--text);
-
-	overflow-x: hidden;
 }
 
 body {
