--- a/public/styles/mixins.scss
+++ b/public/styles/mixins.scss
@@ -125,7 +125,6 @@ $globalRadius: 55px;
 @mixin mainSection {
 	width: 100%;
 	padding: 1rem;
-	height: auto;
 	@include flex(column, flex-start, center);
 	gap: 1rem;
 	max-width: var(--maxWidth);
